--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-VITE_API_URL=http://localhost:4008/api
+VITE_API_URL=https://psalmstrings-backend.onrender.com/api
 
 JWT_SECRET=bsykdfdsgvsjdbkjhdbk
 JWT_EXPIRES_IN=1d
